--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Mukta', sans-serif;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -8,4 +12,107 @@ body {
     flex-direction: column;
     height: 100vh;
     width: 100vw;
+    background: radial-gradient(circle at 12.3% 19.3%, rgb(85, 88, 218) 0%, rgb(95, 209, 249) 100.2%);
+}
+
+.header {
+    background: radial-gradient(592px at 48.2% 50%, rgba(255, 255, 249, 0.6) 0%, rgb(160, 199, 254) 74.6%);
+    width: 100vw;
+    text-align: center;
+    border-radius: 5px;
+}
+
+/* buttons */
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    gap: 35px;
+}
+
+button {
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-weight: bold;
+    font-size: 15px;
+    background-color: rgb(226, 221, 255);
+    margin: 25px
+}
+
+/* cards */
+
+.cardarea {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+.card {
+    background: radial-gradient(592px at 48.2% 50%, rgba(255, 255, 249, 0.6) 0%, rgb(160, 199, 254) 74.6%);
+    border: 2px solid lightblue;
+    padding: 25px;
+    width: 300px;
+    margin: 15px;
+}
+
+.card button {
+    background: lightyellow;
+    padding: 5px 10px;
+    width: 50px;
+    margin: 5px;
+}
+
+.card img {
+    width: 90%;
+}
+
+/* modal */
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%) scale(0);
+    transition: .5s ease-in-out;
+    visibility: hidden;
+    opacity: 0;
+    color: white;
+    border: 5px solid lightgrey;
+    padding: 30px;
+    padding-top: 10px;
+    border-radius: 10px;
+    background: linear-gradient(to top, #09203f 0%, #537895 100%);
+    min-width: 20%;
+}
+
+.modal > h3 {
+    text-align: center;
+    padding: 10px
+}
+
+.active {
+    visibility: visible;
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+form label {
+    grid-column: 1 / 2;
+}
+
+form input {
+    grid-column: 2 / 3;
+}
+
+form button {
+    grid-column: 1 / 3;
+    margin: 0px 40px;
+    margin-top: 10px
 }
