--- a/style.css
+++ b/style.css
@@ -5,14 +5,15 @@
 body {
     margin: 0;
     padding: 0;
+    background-image: url('./images/background.png')
+    /* background: radial-gradient(circle at 12.3% 19.3%, rgb(85, 88, 218) 0%, rgb(95, 209, 249) 100.2%); */
+
 }
 
 .container {
     display: flex;
     flex-direction: column;
-    height: 100vh;
     width: 100vw;
-    background: radial-gradient(circle at 12.3% 19.3%, rgb(85, 88, 218) 0%, rgb(95, 209, 249) 100.2%);
 }
 
 .header {
@@ -21,7 +22,6 @@ body {
     text-align: center;
     border-radius: 5px;
 }
-
 /* buttons */
 
 .buttons {
@@ -36,7 +36,15 @@ button {
     font-weight: bold;
     font-size: 15px;
     background-color: rgb(226, 221, 255);
-    margin: 25px
+    margin: 25px;
+    transition: background-color 0.2s, transform 0.2s;
+
+}
+
+button:hover {
+    transform: scale(1.2);
+    background: linear-gradient(98.3deg, rgb(61, 61, 61) 10.6%, rgb(255, 48, 48) 97.7%);
+    color: white;
 }
 
 /* cards */
@@ -49,7 +57,7 @@ button {
 }
 
 .card {
-    background: radial-gradient(592px at 48.2% 50%, rgba(255, 255, 249, 0.6) 0%, rgb(160, 199, 254) 74.6%);
+    background: radial-gradient(592px at 48.2% 50%, rgba(255, 255, 249, 1) 0%, rgb(160, 199, 254) 74.6%);
     border: 2px solid lightblue;
     padding: 25px;
     width: 300px;
@@ -59,13 +67,35 @@ button {
 .card button {
     background: lightyellow;
     padding: 5px 10px;
-    width: 50px;
+    width: 55px;
+    height: 30px;
     margin: 5px;
 }
 
-.card img {
-    width: 90%;
+.card .delete {
+    background-image: url('./images/trash.png');
+    background-size: 18px;
+    background-repeat: no-repeat;
+    background-position: center;
 }
+
+.card .button-read {
+    background-image: url('./images/book.png');
+    background-size: 18px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.cardtitle {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.cardauthor {
+    font-size: 17px;
+}
+
+
 
 /* modal */
 
@@ -103,16 +133,7 @@ form {
     gap: 10px;
 }
 
-form label {
-    grid-column: 1 / 2;
-}
-
-form input {
-    grid-column: 2 / 3;
-}
-
 form button {
-    grid-column: 1 / 3;
     margin: 0px 40px;
-    margin-top: 10px
+    margin-top: 10px;
 }
